--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	 <h1> Hola Mundo GIT</h1>
 	 <ul>
 		<li> <a href="servicios.html"> Servicio </a>
-
+	        
 		</li>
+		<li> <a href="contactos.html"> Contactos</a></li> 
 	 </ul>
 	</body>
 </html>
